--- a/src/app/forgetpassword/forgetpassword.component.css
+++ b/src/app/forgetpassword/forgetpassword.component.css
@@ -5,6 +5,19 @@
 
 .FDetails {
     width: 350px;
-    margin-left: 200px;
+    margin-left: 100px;
     margin-top: 3rem;
+}
+.actions {
+    margin-left:  130px;
+}
+.mainContent {
+    margin-left: 500px;
+    margin-right: 500px;
+    width: 500px;
+}
+.loginDetails {
+    width: 300px;
+    margin-left:120px;
+    margin-top: 1rem;
 }
