--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -13,10 +13,42 @@
         </ul>
     </div>
 </nav>
-<h3><button class="btn  btn-outline-success fw-bold m-2">My DashBoard</button></h3>
-<div class="actions">        
-    <button type="submit" class="btn  btn-outline-success fw-bold m-2">Booking</button>
-    <button type="submit" class="btn  btn-outline-success fw-bold m-2">Profile</button>
-    <button type="submit" class="btn  btn-outline-success fw-bold m-2">Change password</button>
-    <button type="submit" class="btn  btn-outline-success fw-bold m-2">Wallet</button>
+<h3><button class="btn  btn-outline-success fw-bold m-2" (click)= "mydashboard()">My DashBoard</button></h3>
+<div class="row">
+    <div class="actions col-2" *ngIf="page"> 
+        <ul class="nav flex-column listItems">
+            <li class="nav-item">
+            <button class="btn  btn-outline-success fw-bold m-1 w-100">Booking</button>
+            </li>
+            <li class="nav-item">
+                <button class="btn  btn-outline-success fw-bold m-1 w-100">Profie</button>
+            </li>
+            <li class="nav-item">
+                <button class="btn  btn-outline-success fw-bold m-1 w-100">Change Password</button>
+            </li>
+            <li class="nav-item">
+                <button class="btn  btn-outline-success fw-bold m-1 w-100">Wallet</button>
+              </li>
+          </ul>
+    </div>
+    <div class="mainContent col-10">
+        <div class="details">
+            <h3>Change password</h3>
+            <div class="row">
+                <div class="loginDetails">
+                    <input type="Enter your password" class="form-control" placeholder="Enter your CUrrent Password">
+                </div>
+                <div class="loginDetails">
+                    <input type="Enter your New password" class="form-control" placeholder="Enter your New Password">
+                </div>
+                <div class="loginDetails">
+                    <input type="Enter your Confirm password" class="form-control" placeholder="Enter your Confirm Password">
+                </div>
+            </div>
+            <div class="actions">
+                <button class="btn btn-outline-success fw-bold m-4" >Submit</button>
+                <button class="btn btn-outline-danger fw-bold m-4" >Cancel</button>
+            </div>
+        </div>
+    </div>
 </div>
