--- a/src/app/forgetpassword/forgetpassword.component.html
+++ b/src/app/forgetpassword/forgetpassword.component.html
@@ -3,12 +3,30 @@
         <a class="navbar-brand fw-bold" href="#">Bus Reservation System</a>
     </div>
 </nav>
-<div class="row">
-    <div class="FDetails">
-        <input type="email" id="email" placeholder="Email" class="form-control" name= "email">
+<div class="mainContent">
+    <div class="details">
+        <h3>Forget password</h3>
+        <div class="row">
+            <div class="loginDetails">
+                <input type="Enter your email" id="defaultLoginFormEmail" class="form-control"
+                    placeholder="Enter your E-mail">
+            </div>
+        </div>
+        <div class="actions">
+            <button class="btn btn-outline-success fw-bold m-4" (click)="submitMail()">Submit</button>
+            <button class="btn btn-outline-danger fw-bold m-4" (click)="gotologin()">Cancel</button>
+        </div>
+    </div>
+</div>
+<div class="mainContent mt-5" *ngIf="otpSection">
+<div class="details">
+    <div class="row">
+        <div class="loginDetails">
+            <input type="OPT" id="defaultLoginFormEmail" class="form-control" placeholder="Enter your otp">
+        </div>
     </div>
     <div class="actions">
-        <button class="btn btn-outline-success fw-bold m-2">Submit</button>
-        <button class="btn btn-outline-danger fw-bold m-2" (click)="gotologin()">Cancel</button>
+        <button class="btn btn-outline-success fw-bold m-4">Submit</button>
+        <button class="btn btn-outline-danger fw-bold m-4"(click)="resend()">Resend</button>
     </div>
 </div>
