--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,51 +1,16 @@
-<nav class="navbar navbar-expand-lg navbar-light m-4" style="background-color: #e3f2fd;">
-    <div class="container-fluid">
-        <a class="navbar-brand fw-bold" href="#">Bus Reservation System</a>
-        <button class="btn btn-outline-success" (click)="goToLogin()">Login-SignUp</button>
+<div class="card">
+    <div class="card-body">
+        <h3 >WELCOME TO BUS RESERVATION</h3>  
     </div>
-</nav>
-<nav class="navbar navbar-expand-lg navbar-light m-4"  style="background-color: #e3f2fd;">
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Terms Of Use </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link " href="#" tabindex="-1" aria-disabled="true">Contact Us</a>
-            </li>
-        </ul>
+</div>
+<!-- ************************************************************************************************************** -->
+<div class="row">
+    <div class="col-6">
+        <img src="https://cdn.pixabay.com/photo/2018/09/17/23/16/travel-3685042__340.png" alt="">
     </div>
-</nav>
-<div class="mainContent">
-    <h3>Online Booking</h3>
-    <div class="details">
-        <div class="row m-5">
-            <div class="col-6">
-                <label>From</label>
-                <input class="form-control me-2 content">
-            </div>
-            <div class="col-6">
-                <label>To</label>
-                <input class="form-control me-2 content">
-            </div>
-        </div>
-        <div class="row m-5">
-            <div class="col-6">
-                <label>Date of Journey</label>
-                <input class="form-control me-2 content">
-            </div>
-            <div class="col-6">
-                <label>Date of Return (optional)</label>
-                <input class="form-control me-2 content">
-            </div>
-        </div>       
 
-        <div id="searchBus">
-            <button class="btn btn-outline-success" (click)="getBus()">Search Bus</button>
-        </div>
-    
+    <div class="col-6">
+        <img src="https://cdn.pixabay.com/photo/2016/10/06/13/04/reading-1718985__340.png" width="640px" alt=""
+        style="border-radius: 100px">
     </div>
 </div>
