--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -66,10 +66,10 @@
         </ul>
 
         <ul class="navbar-nav ml-auto mt-2 mt-lg-0" style="float: right;">
-            <li class="nav-item active">
-                <a class="nav-link" routerLink="register"(click)="register()"><b>Register</b> </a>
+            <li class="nav-item active" *ngIf="!isOwnerLogin && !isCustomerLogin">
+                <a class="nav-link" routerLink="register" (click)="register()"><b>Register</b> </a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item active" *ngIf="!isOwnerLogin && !isCustomerLogin">
                 <a class="nav-link" routerLink="login"(click)="login()"><b>Login</b> </a>
             </li>
             <li class="nav-item active" *ngIf="isCustomerLogin">
