--- a/src/app/add-bus/add-bus.component.html
+++ b/src/app/add-bus/add-bus.component.html
@@ -3,7 +3,7 @@
     <form #createBus="ngForm" (ngSubmit)="addBus(createBus)">
         <h1 class="h1 text-center">Add Bus </h1>
         <div class="form-group">
-            <label for="busId" class="text-success">busId</label>
+            <label for="busId" class="text-success">BusId</label>
             <input type="number" #busId="ngModel" ngModel name="busId" id="busId" class="form-control" required
                 placeholder="Enter Bus id">
             <div *ngIf="busId.touched && busId.invalid">
@@ -12,16 +12,16 @@
         </div>
 
         <div class="form-group">
-            <label for="busName" class="text-success">Name</label>
-            <input type="text" #busName="ngModel" ngModel name="busName" id="destination" class="form-control" required
-                placeholder="Enter Bus Name">
-            <div *ngIf="busName.touched && busName.invalid">
+            <label for="driverName" class="text-success">Driver Name</label>
+            <input type="text" #driverName="ngModel" ngModel name="driverName" id="driver" class="form-control" required
+                placeholder="Enter Driver Name">
+            <div *ngIf="driverName.touched && driverName.invalid">
                 <p class="alert alert-danger"> This field is required</p>
             </div>
         </div>
 
         <div class="form-group">
-            <label for="startingPoint" class="text-success">source
+            <label for="startingPoint" class="text-success">Departure Station
                 </label>
             <input type="text" #startingPoint="ngModel" ngModel name="startingPoint" id="startingPoint"
                 class="form-control" required placeholder="Enter Starting point">
@@ -31,7 +31,7 @@
         </div>
 
         <div class="form-group">
-            <label for="endingPoint" class="text-success">DESTINATION
+            <label for="endingPoint" class="text-success">Destination Station
                 </label>
             <input type="text" #endingPoint="ngModel" ngModel name="endingPoint" id="endingPoint" class="form-control"
                 required placeholder="Enter ending point">
@@ -51,7 +51,7 @@
         </div>
 
         <div class="form-group">
-            <label for="cost" class="text-success">PRICE</label>
+            <label for="cost" class="text-success">Fare</label>
             <input type="number" #cost="ngModel" ngModel name="cost" id="cost" class="form-control" required
                 placeholder="Enter Ticket Price">
             <div *ngIf="cost.touched && cost.invalid">
@@ -60,7 +60,7 @@
         </div>
 
         <div class="form-group">
-            <label for="busType" class="text-success">busType</label>
+            <label for="busType" class="text-success">Bus Type</label>
             <input type="text" #busType="ngModel" ngModel name="busType" id="busType" class="form-control" required
                 placeholder="Enter Bus Type">
             <div *ngIf="busType.touched && busType.invalid">
