--- a/src/app/show-all-buses/show-all-buses.component.html
+++ b/src/app/show-all-buses/show-all-buses.component.html
@@ -2,9 +2,9 @@
     <table class="table table-bordered table-hover table-striped">
         <thead style="background:darkgrey">
             <td>bus id</td>
-            <td>Bus Name</td>
-            <td>Bus Source Id</td>
-            <td>Bus Destintion</td>
+            <td>Driver Name</td>
+            <td>Bus Departure Station</td>
+            <td>Bus Destintion Station</td>
             <td>Bus Type</td>
             <td>Total Seats</td>
             <td>Ticket Price</td>
@@ -12,7 +12,7 @@
         <tbody>
             <tr *ngFor='let bus of buses'>
                 <td>{{bus.busId}}</td>
-                <td>{{bus.busName}}</td>
+                <td>{{bus.driverName}}</td>
                 <td>{{bus.startingPoint}}</td>
                 <td>{{bus.endingPoint}}</td>
                 <td>{{bus.busType}}</td>
