--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -11,8 +11,15 @@
     </div>
 
     <div class="form-group">
-        <label for="userName" class="text-success">Name</label>
-        <input type="text" #userName="ngModel" ngModel name="userName" id="userName" class="form-control" required placeholder="Enter user name">
+        <label for="userName" class="text-success">First Name</label>
+        <input type="text" #userName="ngModel" ngModel name="userName" id="userName" class="form-control" required placeholder="Enter First name">
+        <div *ngIf="userName.touched && userName.invalid">
+            <p class="alert alert-danger"> This field is required</p>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="userName" class="text-success">Last Name</label>
+        <input type="text" #userName="ngModel" ngModel name="userName" id="userName" class="form-control" required placeholder="Enter Last name">
         <div *ngIf="userName.touched && userName.invalid">
             <p class="alert alert-danger"> This field is required</p>
         </div>
